EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

== 02/02/2015 ==
Akkadius: Implement Packet logs with dumps
	- Category: 41: Packet: Server -> Client With Dump
	- Category: 42: Packet: Server -> Client With Dump
	See: http://wiki.eqemulator.org/p?Logging_System_Overhaul#packet-logging-levels

== 02/01/2015 ==
demonstar55: Add quest debugging to lua
	eq.debug("Test debug level implicit 1")
	eq.debug("Test debug level explicit 1", 1)
	eq.debug("Test debug level explicit 2", 2)
	eq.debug("Test debug level explicit 3", 3)
Akkadius: Add Packet Logging Categories
	- 5 - Packet: Client -> Server - Logs::Client_Server_Packet
	- 39 - Packet: Server -> Client - Logs::Server_Client_Packet
	- 40 - Packet: Client -> Server Unhandled - Logs::Client_Server_Packet_Unhandled
	See: http://wiki.eqemulator.org/p?Logging_System_Overhaul#packet-logging
	
== 01/31/2015 ==
Trevius: Fixed FindGroundZ() and GetGroundZ() to once again utilize the X and Y arguments that are passed to them.

== 01/30/2015 ==
Akkadius: Implemented event type "EVENT_ENVIRONMENTAL_DAMAGE"
	- This event triggers when taking any sort of environmental damage. Example use: 
	sub EVENT_ENVIRONMENTAL_DAMAGE{
		quest::debug("EVENT_ENVIRONMENTAL_DAMAGE");
		quest::debug("env_damage is " . $env_damage);
		quest::debug("env_damage_type is " . $env_damage_type);
		quest::debug("env_final_damage is " . $env_final_damage);
	} 
	Result: (Test falling in Velks): http://i.imgur.com/tPRL7yL.png
	- Implemented LUA counterpart of this same implementation above
Akkadius (Bobaski): Add PoK New Merchant sql/git/optional/2015_01_30_poknowledge_spell_vendors.sql

== 01/29/2015 ==
Trevius: Added more information to Mercenary Logging.
Trevius: Added potential fix for Mercenaries that fail to unsuspend.
Trevius: Added a new "statscale" field to the merc_stats table that can be used to quickly balance Mercenary Stats based on Level.